--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<spring-cloud.version>2024.0.2</spring-cloud.version>
 		<springdoc.version>2.6.0</springdoc.version>
 		<springdoc.plugin.version>1.5</springdoc.plugin.version>
+		<testcontainers.version>1.20.2</testcontainers.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -73,6 +74,18 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>${testcontainers.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<version>${testcontainers.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
